src/test/deca/syntax/invalid/expr/test_expr_readint_without_par.deca
// Description:
//    tests de programme syntaxiquement incorrects : ineq avec << au lieu de <
//
// Resultats:
//    Ligne 13: no viable alternative at input '0'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = readInt;
}

